src/objects/KOL_Contract_Deliverable__c.object
<CustomObject>
    <description>This object contains the deliverables connected to a KOL Contract</description>
    <fields>
        <fullName>Contract_rate__c</fullName>
        <formula>KOL_Contract__r.Hourly_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_type__c</fullName>
        <label>Contract type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Confidentiality</fullName>
                </value>
                <value>
                    <fullName>Speaking</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CventEventUpd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cvent Event</label>
        <referenceTo>CventEvents__Event__c</referenceTo>
        <relationshipLabel>KOL Contract Deliverables</relationshipLabel>
        <relationshipName>KOL_Contract_Deliverables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>The General Date of the Delivery</description>
        <inlineHelpText>The General Date of the Delivery</inlineHelpText>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Descripion_Links_To_Referenced_Materia__c</fullName>
        <label>Descripion &amp; Links To Referenced Materia</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>KOL_Contract__c</fullName>
        <description>The KOL Contract that the Deliverable is deducting from</description>
        <inlineHelpText>The KOL Contract that the Deliverable is deducting from</inlineHelpText>
        <label>KOL Contract</label>
        <referenceTo>KOL_Contract__c</referenceTo>
        <relationshipLabel>Deliverables</relationshipLabel>
        <relationshipName>Deliverables</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Planning_compensation__c</fullName>
        <formula>Planning_hours__c * KOL_Contract__r.Hourly_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planning compensation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Planning_hours__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>1-2 hrs per lecture hr when speaker is presenting curriculum they have presented on prior occasions.
4-6 hrs per lecture hr when speaker presents curriculum for the first time.
Lecture at major industry mtg and/or for DSOs may require more planning hrs.</inlineHelpText>
        <label># of Planning Hours to be compensated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PurchaseOrder__c</fullName>
        <label>Purchase Order #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>The number that is deliverd, and deducted from the KOL Contract</description>
        <inlineHelpText>The number that is deliverd, and deducted from the KOL Contract</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Speaker_Engagement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Speaker Engagement</label>
        <referenceTo>Engagement__c</referenceTo>
        <relationshipLabel>KOL Contract Deliverables</relationshipLabel>
        <relationshipName>KOL_Contract_Deliverables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <label>Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Live Lecture</fullName>
                </value>
                <value>
                    <fullName>Hands-on</fullName>
                </value>
                <value>
                    <fullName>TtT</fullName>
                </value>
                <value>
                    <fullName>Product Training</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>On-Demand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_compensation__c</fullName>
        <formula>Work_compensation__c + Planning_compensation__c + Travel_compensation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total compensation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Travel_compensation__c</fullName>
        <formula>Travel_hours__c *  KOL_Contract__r.Hourly_Rate__c*0.5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Travel compensation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Travel_hours__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Estimated time to and from a destination to fulfill contracted work.</inlineHelpText>
        <label># of Travel Hours to be compensated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of Deliverable</description>
        <inlineHelpText>The type of Deliverable</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Contract_type__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Case Serie</fullName>
                </value>
                <value>
                    <fullName>Clinical Picture or Video</fullName>
                </value>
                <value>
                    <fullName>Lecture</fullName>
                </value>
                <value>
                    <fullName>Presentation Material</fullName>
                </value>
                <value>
                    <fullName>Publication</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>Scientific Poster</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UniqueCount__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>The Cost of this (should be deducted from the KOL Contract)</description>
        <inlineHelpText>The Cost of this (should be deducted from the KOL Contract)</inlineHelpText>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Work_compensation__c</fullName>
        <formula>Work_hours__c *  KOL_Contract__r.Hourly_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work compensation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Work_hours__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText># of required working hours, regardless of breaks and meals. Example: event scheduled from 8 AM to 3 PM would be calculated at 7 work hours</inlineHelpText>
        <label># of hours of work</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>KOL Contract Deliverable</label>
    <nameField>
        <label>Deliverable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KOL Contract Deliverables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Travel_hours_not_allowed</fullName>
        <active>true</active>
        <description>Validation rule to stop users from adding any travel hours to healthcare KOLs licensed in France or the Netherlands</description>
        <errorConditionFormula>AND(Travel_hours__c &gt;0, AND(TEXT(KOL_Contract__r.License_Country__c)=&quot;FR&quot;, KOL_Contract__r.Expert__r.Not_a_Healthcare_Professional__c =FALSE))</errorConditionFormula>
        <errorDisplayField>Travel_hours__c</errorDisplayField>
        <errorMessage>Unfortunately, you are not allowed to add any travel hours for this KOL.</errorMessage>
    </validationRules>
</CustomObject>